@@ -33,6 +33,7 @@ Version 1.0.xxx (August xxth 2013)
 - Fixed: Baro meter temperature graph keep showing loading effect
 - Fixed: P1 Smart Meter power, now reports 0, when timeout
 - Fixed: Rain week chart (caused by new highcharts version)
+- Implemented: Logging RFXSensor AD/Volt
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
